--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-jwt": "^3.3.0",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^5.7.0",
+    "jwt-decode": "^2.0.1",
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
     "normalize.css": "^4.0.0",
