add basic year viewing

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "compression": "^1.6.1",
     "connect-mongo": "^1.1.0",
     "cors": "^2.7.1",
+    "dateformat": "^1.0.12",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
@@ -58,6 +59,7 @@
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
     "normalize.css": "^4.0.0",
+    "pluralize": "^1.2.1",
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
